# university-db

./: CMakeLists.txt  LICENSE  README.md
src/: database.cpp  database.hpp  employee.cpp  employee.hpp  main.cpp  person.cpp  person.hpp  sex.hpp  student.cpp  student.hpp
tests/: database-ut.cpp  employee-ut.cpp  student-ut.cpp
